--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="src/style.css"/>
     <title>World Clock</title>
 </head>
 <body>
@@ -12,5 +13,6 @@
         This project was coded by Alicia Blair and is
         <a href="#" target="_blank">open sourced on GitHub</a> 
     </footer>
+    <script src="src/index.js"></script>
 </body>
 </html>
