--- a/index.html
+++ b/index.html
@@ -8,7 +8,28 @@
     <title>World Clock</title>
 </head>
 <body>
+    <div class="container">
     <h1>World Clock</h1>
+<select>
+    <option value="">Select a city...</option>
+    <option value="">London</option>
+    <option value="">New York</option>
+    <option value="">Auckland</option>
+</select>
+
+<div class="city">
+    <h2>Los Angeles 🎬</h2>
+    <div class="date">August 15th 2023</div>
+    <div class="time">1:48:15 AM</div>
+</div>
+
+<div class="city">
+    <h2>Sydney 🦘</h2>
+    <div class="date">August 15th 2023</div>
+    <div class="time">1:48:15 AM</div>
+</div>
+
+
     <footer>
         This project was coded by Alicia Blair and is
         <a href="https://github.com/girlsgotomarz/world-clock" target="_blank">open sourced on GitHub</a> 
