--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div class="container">
     <h1>World Clock</h1>
+
 <select>
     <option value="">Select a city...</option>
     <option value="">London</option>
@@ -17,21 +18,25 @@
     <option value="">Auckland</option>
 </select>
 
-<div class="city">
-    <h2>Los Angeles 🎬</h2>
-    <div class="date">August 15th 2023</div>
-    <div class="time">1:48:15 AM</div>
+  <div class="city">
+    <div>
+      <h2>Los Angeles</h2>
+      <div class="date">August 15th 2022</div>
+    </div>
+    <div class="time">1:48:15 <small> AM </small></div>
+  </div>
+
+  <div class="city">
+    <div>
+      <h2>New York</h2>
+      <div class="date">August 15th 2022</div>
+    </div>
+    <div class="time">1:48:15 <small> AM </small></div>
+  </div>
+
 </div>
-
-<div class="city">
-    <h2>Sydney 🦘</h2>
-    <div class="date">August 15th 2023</div>
-    <div class="time">1:48:15 AM</div>
-</div>
-
-
-    <footer>
-        This project was coded by Alicia Blair and is
+  <footer>
+        This project was coded by <strong>Alicia Blair</strong> and is
         <a href="https://github.com/girlsgotomarz/world-clock" target="_blank">open sourced on GitHub</a> 
     </footer>
     <script src="src/index.js"></script>
