--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
     <div class="container">
     <h1>World Clock</h1>
 
-<select>
+<select id="city">
     <option value="">Select a city...</option>
-    <option value="">London</option>
-    <option value="">New York</option>
-    <option value="">Auckland</option>
+    <option value="Europe/London">London</option>
+    <option value="Europe/Paris">Paris</option>
+    <option value="Pacific/Auckland">Auckland</option>
 </select>
 
-  <div class="city" id="los-angeles">
+<div id="cities">
+<div class="city" id="los-angeles">
     <div>
       <h2>Los Angeles</h2>
       <div class="date"></div>
@@ -35,6 +36,7 @@
     </div>
     <div class="time"></div>
   </div>
+</div>
 
 </div>
   <footer>
