added link to name

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 
   <footer>
-        This project was coded by <strong>Alicia Blair</strong> and is
+        This project was coded by <strong><a href="https://www.linkedin.com/in/alicia-blair-3a9a72225/" target="_blank">Alicia Blair</a></strong> and is
         <a href="https://github.com/girlsgotomarz/world-clock" target="_blank">open sourced on GitHub</a> 
     </footer>
     <script src="src/index.js"></script>
